[project]
name = "car-webscraper-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nazer, Mohamed Ilyan", email = "mohamed.ilyan+Boskalis@boskalis.com" }
]
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "kaleido==0.2.1",
    "notebook>=7.4.0",
    "openai>=1.75.0",
    "pre-commit>=4.2.0",
    "pycaret>=3.3.2",
    "ruff>=0.11.6",
    "scikit-learn>=1.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
